--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,13 @@
+//apply plugin: "com.android.application"
+//apply plugin: "org.jetbrains.kotlin.android"
+//apply plugin: "com.facebook.react"
+//apply plugin: " com.google.gms.google-services"
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services"
+
+// Rest of your configuration
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -77,7 +84,7 @@ android {
     namespace "com.demoapp"
     defaultConfig {
         applicationId "com.demoapp"
-        minSdkVersion rootProject.ext.minSdkVersion
+        minSdkVersion 23
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
@@ -108,6 +115,9 @@ dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
+    implementation ("com.google.firebase:firebase-auth:20.0.0")// Example version
+    implementation ("com.google.firebase:firebase-analytics")
+    implementation platform("com.google.firebase:firebase-bom:33.1.2")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
